--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -18,7 +18,18 @@
             <p>Adresse : {{ user.collect.collector.organismAddress }}, {{ user.collect.collector.organismPostcode }}
                 {{ user.collect.collector.organismCity }}</p>
             <p>Téléphone : 0{{ user.collect.collector.organismPhone }}</p>
-            <p><a href="{{ path('reset_collect') }}" class="font-weight-bold">Se désinscrire de cette collecte</a></p>
+            <p>Pour les téléphones suivants:</p>
+            {% for estimation in user.collect.estimations %}
+                <div>
+                    <p>
+                            _ {{ estimation.brand }}
+                        {{ estimation.model }}
+                        de {{ estimation.capacity }} Go
+                        pour une valeur de: {{ estimation.estimatedPrice }} €
+                    </p>
+                </div>
+            {% endfor %}
+            <p><a href="{{ path('reset_collect', {collect: user.collect.id }) }}" class="font-weight-bold">Se désinscrire de cette collecte</a></p>
         {% else %}
             <p>Tu n'es inscrit à aucune collecte.</p>
         {% endif %}
