correction faute d'orthographe sur la page livraison et garantie

--- a/templates/infos/livraisons.html.twig
+++ b/templates/infos/livraisons.html.twig
@@ -145,7 +145,7 @@
             <h2 class="primary-title">Garanties</h2>
             <p class="text-justify">Tous nos smartphones sont garantis 1 an. Nous gérons nous même la garantie
                 dans notre atelier dans les Hauts-de-France. En cas de besoin, il suffit de nous écrire à
-                <span class="blue-text">sav@bipbip-mobile.com</span> et votre demande sera immédiatement traitées par nos services .</p>
+                <span class="blue-text">sav@bipbip-mobile.com</span> et votre demande sera immédiatement traitée par nos services.</p>
             <p class="text-justify">Vous pouvez souscrire une extension de garantie d’1 an supplémentaire (soit 2 ans de
                 garantie au total) pour <span class="blue-text">29.00€ TTC</span>.</p>
         </div>
