--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -12,7 +12,7 @@
     <h1 class="primary-title">Modifier Partenaire</h1>
 
     {{ include('organisms/_form.html.twig', {'button_label': 'Modifier'}) }}
-    <button class="secondary-button">Modifier</button>
+    <button class="secondary-button editLink">Modifier</button>
     {{ form_end(form) }}
 
     {{ include('organisms/_delete_form.html.twig') }}
