changement des textes dans les bulles info sur la page d'estimation

--- a/templates/bdc/index.html.twig
+++ b/templates/bdc/index.html.twig
@@ -15,7 +15,7 @@
             <div class="col-5 text-center font-weight-bold">
                 Estimation d'origine
             </div>
-            <div class="col-4 mx-auto text-left">
+            <div class="col-4 mx-auto text-left font-weight-bold">
                 Consulter le fichier
             </div>
         </div>
