--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -102,7 +102,18 @@
                 <img class="bubble-info-img" src="{{ asset('/images/info.png') }}" alt="">
                 <div class="bubble-info-bg">
                 </div>
-                <p class="bubble-info-txt w-50">Si un de tes boutons ne fonctionne plus, coche 'non'</p>
+                <p class="bubble-info-txt w-75">
+                    Lorsqu'un smartphone est fonctionnel c'est à dire: <br>
+                    - Il s'allume, s'éteint et se (re)charge.<br>
+                    - Il émet des appels.<br>
+                    - L'écran ne présente pas de pixel "mort".<br>
+                    - Le tactile est palpable, utilisable est sans bug.<br>
+                    - Aucune trace d'oxydation, de rouille ou d'usure.<br>
+                    - Il n'a jamais été démonté même par un pote.<br>
+                    - Le wi-fi semet en route.<br>
+                    - Bien évidemment, question de bon sens toutes les autres fonctions sont utilisables(boutons volumes
+                    et verrouillage, touch ID, face ID, clavier, micro, haut parleur etc
+                </p>
             </div>
         </div>
         <div class="row">
