--- a/templates/contact/sendMailForDayCollect.html.twig
+++ b/templates/contact/sendMailForDayCollect.html.twig
@@ -1,26 +1,8 @@
 {% block body %}
-    <p>
-        Bonjour,
-    </p>
-
     <div class="font-weight-bold">Téléphones à collecter aujourd'hui:</div>
     <p>
-        {% for collect in collects %}
-            <p>
-                date: {{ collect.dateCollect | date('d-m-Y') }} à {{ collect.dateCollect | date('h:i') }}
-            </p>
-            <p>
-                Organisme: {{ collect.collector.organismName }}
-            </p>
-            <p>
-                lieu: {{ collect.collector.organismAddress }} {{ collect.collector.organismPostCode }}, {{ collect.collector.organismCity }}
-            </p>
-        {% else %}
-            Aucun téléphone à collecter.
-        {% endfor %}
-    </p>
-    <p>
-        Le détail se trouve dans le fichier csv joint à ce message.
+        Bonjour Natacha, comment va tu? :-) Voici en pièce jointe, le fichier des collectes d'aujourd'hui.<br>
+        Bonne journée et bon courage !
     </p>
     <p>
         --<br>
