--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -218,7 +218,7 @@
                     <div class="font-weight-bold pb-2">Besoin d'aide ?<br></div>
                     <a href="{{ path("add_message") }}" title="Contact">Contacte-nous</a><br>
                     <a href="{{ path('home') }}" title="Comment bien choisir son smartphone reconditionné ?">Comment bien choisir son smartphone reconditionné&#8239;?</a><br>
-                    <a href="{{ path('home') }}" title="Nos partenaires">Les grades de smartphones reconditionnés BipBip</a><br>
+                    <a href="{{ path('grade') }}" title="Nos partenaires">Les grades de smartphones reconditionnés BipBip</a><br>
                 </div>
 
             </div>
