changement texte dans choix d'envoi chronopost, tache 132

--- a/templates/user/choiceEnvoi.html.twig
+++ b/templates/user/choiceEnvoi.html.twig
@@ -10,8 +10,8 @@
                     CHRONOPOST
                 </h5>
                 <p class="card-text text-center">
-                    Avec BipBip il est possible de te générer une étiquette Chronopost à
-                    coller sur ton colis et l'envoyer directement à notre dépot.
+                    BipBip te génère une étiquette à coller sur ton colis ou un QR code pour que ton téléphone
+                    arrive chez nous.
                 </p>
                 <p class="text-center">
                     <a class="primary-button button-chrono mt-1" href="{{ path('envoi_chronopost', {'user': user, 'id': estimation.id} ) }}">
