changement texte sur la generation d'etiquette, tache 133

--- a/templates/user/envoi_chronopost.html.twig
+++ b/templates/user/envoi_chronopost.html.twig
@@ -11,9 +11,8 @@
                         GENERER UNE ETIQUETTE
                     </h5>
                     <p class="card-text">
-                        Désormais tu peux imprimer ton étiquette Chronospost et la coller sur ton colis, aucun frais ne t'est demandé ! <br>
-                        Une fenêtre s'ouvrira, tu pourras l'imprimer de suite et un mail te sera envoyé contenant l'étiquette,
-                        si tu souhaites l'imprimer plus tard.
+                        Tu imprimes ton étiquette Chronopost et tu la colles sur ton colis.
+                        Tu n’auras plus qu’à présenter ton colis au bureau de poste.
                     </p>
                     <p class="text-center">
                         {# statut estimation "2" correspond à une génération d'étiquette Chronopost, sauvée sur le serveur #}
@@ -30,8 +29,8 @@
                         RECEVOIR UN CODE
                     </h5>
                     <p class="card-text">
-                        Ou alors, tu préféres recevoir un code sur ton tel, par message, et déposer ton colis avec ce code, l'étiquette
-                        sera générée lors de ton passage au bureau de poste.
+                        Tu reçois un code. Présente-le au bureau de poste le plus proche de chez toi
+                        et ils imprimeront l’étiquette pour toi.
                     </p>
                     <p class="text-center">
                         {# statut estimation "4" correspond à un code Chronopost envoyé au client #}
