changement des etapes sur la partie 'comment ca marche', tache 135

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -79,35 +79,28 @@
                         <div class="col">
                             Après la création de ton compte
                             <a href="{{ path('show_collect') }}"><span class="explain-text-color">
-                    choisis un point de collecte</span></a>
+                    choisis un mode de collecte</span></a>
                         </div>
                     </div>
+
                     <div class="row align-items-center p-2">
                         <div class="col-2 text-right">
-                            <img src="{{ asset('images/3.png') }}" alt="3">
+                            <img src="{{ asset('images/3.png') }}" alt="4">
                         </div>
                         <div class="col">
-                            Présente-toi au RDV muni de ta pièce d'identité
+                            Notre expert procède à l’effacement de tes données, vérifie ton smartphone,
+                            te fournit un bon de cession et réalise le paiement.
                         </div>
                     </div>
                     <div class="row align-items-center p-2">
                         <div class="col-2 text-right">
-                            <img src="{{ asset('images/4.png') }}" alt="4">
-                        </div>
-                        <div class="col">
-                            Notre expert vérifie ton smartphone, procède à l'effacement de tes données, te
-                            fournit un bon de cession et procède au paiement.
-                        </div>
-                    </div>
-                    <div class="row align-items-center p-2">
-                        <div class="col-2 text-right">
-                            <img src="{{ asset('images/5.png') }}" alt="5">
+                            <img src="{{ asset('images/4.png') }}" alt="5">
                         </div>
                         <div class="col">
                         <span class="explain-text-color">- Récupère ton argent<br>
                         - Fais un don</span> de la valeur de ton tél pour une association<br>
                             <span class="explain-text-color">- Profite d'un bon de réduction</span> sur l'achat
-                            d'un bipbip mobile
+                            d'un BipBip mobile
                         </div>
                     </div>
                     <div class="row align-items-center">
