--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -293,6 +293,7 @@ header {
     /* MENU */
 
     #menu {
+
         a {
             color: black;
             text-decoration: none;
@@ -314,6 +315,7 @@ header {
         left: 50%;
         transform: translate(-50%, -50%);
         font-family: $primary-font;
+        overflow: scroll;
 
         .smallLogoMenu {
             img {
