--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -151,13 +151,13 @@
                 </div>
                 <div class="col-6 col-sm col-md-3 text-center">
                     <img src="{{ asset('images/logos-profitable.png') }}" alt="Profitable">
-                    <p>Profitable</p>
+                    <p>Engagé</p>
                     <p class="small-text">Vends, achète et recycle en toute sécurité avec notre partenaire Pumpkin</p>
                 </div>
                 <div class="col-6 col-sm col-md-3 text-center">
                     <img src="{{ asset('images/logos-environnemental.png') }}" alt="Environnemental">
                     <p>Environnemental</p>
-                    <p class="small-text">Une bonne action pour ta planète</p>
+                    <p class="small-text">Une bonne action pour la planète</p>
                 </div>
             </div>
         </section>
