--- a/templates/home/vends.html.twig
+++ b/templates/home/vends.html.twig
@@ -107,7 +107,7 @@
                             <img src="{{ asset('images/coche.png') }}" alt="Bonne action" class="img-fluid">
                         </div>
                         <div class="col">
-                            Tu as fait une bonne action pour ta planète&#8239;!
+                            Tu as fait une bonne action pour la planète&#8239;!
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
         <section>
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-8">
-                    <h2 class="primary-title-left">Pourquoi vendre mon tél à BipBip&nbsp;?</h2>
+                    <h2 class="primary-title-left mt-5">Pourquoi vendre mon tél à BipBip&nbsp;?</h2>
                     <p class="text-justify">Vendre ton téléphone à BipBip c'est permettre à une petite entreprise du Nord de se
                         développer. Favoriser l'emploi local chez nous mais aussi chez nos partenaires. C'est aider
                         à construire une économie plus durable et surtout gagner de l'argent en faisant
@@ -132,15 +132,25 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col">
-                    <h2 class="primary-title-left">Que devient mon tél ?</h2>
-                    <p class="text-justify">Lorsqu'un téléphone passe avec succès les tests de fonctionnement, il sera ensuite vendu à un prix
-                        raisonnable sur notre site Internet.</p>
-                    <p class="text-justify">Donne vie à des BipBip mobile en mettant en oeuvre des actions locales&nbsp;!</p>
-                    <p class="text-justify">Au plus nous collectons de téléphones, plus les prix de nos BipBip mobiles pourront être bas tout en
-                        gardant sa qualité absolue&nbsp;!</p>
-                    <p class="explain-text-color">On compte sur toi pour collecter un MAXIMUM de téléphones&nbsp;!</p>
+                    <div class="d-flex flex-column ">
+                        <h2 class="primary-title-left">Que devient mon tél ?</h2>
+                        <p class="text-justify">Lorsqu'un téléphone passe avec succès les tests de fonctionnement, il sera ensuite vendu sur notre site Internet.</p>
+                        <p class="text-justify">Donne vie à des BipBip mobile en mettant en oeuvre des actions locales&nbsp;!</p>
+                        <p class="text-justify">Au plus nous collectons de téléphones, plus les prix de nos BipBip mobiles pourront être bas tout en
+                            gardant sa qualité absolue&nbsp;!</p>
+                        <p>Et ne t'inquiète pas&nbsp;! L'équipe BipBip assure la qualité de tous nos produits reconditionnés.</p>
+                        <p class="text-justify">Si tu ne sais pas comment choisir le grade de ton téléphone,
+                            <span class="font-weight-bold">jette un coup d'oeil par ici&nbsp;!</span></p>
+                        <p class="explain-text-color mb-5">On compte sur toi pour collecter un MAXIMUM de téléphones&nbsp;!</p>
+                    </div>
                 </div>
-            </div>
+                    <div class="p-3 mt-3">
+                        <img src="{{ asset('images/photo-main-gant.png') }}"
+                             alt="Processus de recyclage"
+                             class="img-fluid mt-5"
+                             id="photo-processus">
+                    </div>
+                </div>
         </section>
 
         <section>
@@ -148,18 +158,9 @@
                 <div class="col-12">
                     <h2 class="secondary-round-title">Découvre le processus de recyclage en BD</h2>
                 </div>
-                <div class="col-12 p-3">
-                    <img src="{{ asset('images/photo-main-gant.png') }}"
-                         alt="Processus de recyclage"
-                         class="img-fluid"
-                         id="photo-processus">
-                    <p class="text-justify">Lorsqu'un téléphone passe avec succès les tests de fonctionnement, il sera ensuite vendu à un prix
-                        raisonnable sur notre site Internet.</p>
-                    <p class="text-justify">Donne vie à des BipBip mobile en mettant en oeuvre des actions locales&nbsp;!<br>
-                        Plus nous collecterons de téléphones, plus les prix de nos BipBip mobiles seront bas.<br>
-                        Et ne t'inquiète pas&nbsp;! L'équipe BipBip assure la qualité de tous nos produits reconditionnés.</p>
-                    <p class="text-justify">Si tu ne sais pas comment choisir le grade de ton téléphone,
-                        <span class="font-weight-bold">jette un coup d'oeil par ici&nbsp;!</span></p>
+
+                <div class="col-12">
+                     <img src="" alt="bd">
                 </div>
             </div>
         </section>
