--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -175,7 +175,7 @@
         {% endblock %}
 
         {% block footer %}
-        <footer>
+        <footer class="w-100">
             <h2 class="primary-title">T'en veux plus ?</h2>
             <div class="row social-networks justify-content-center mt-2 mb-4">
                 <div class="col-3 col-1-md text-center">
