--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -90,7 +90,7 @@
 
                                 <div class="text-menu col-10 mt-1 ml-3 col-sm-6 pl-lg-5 mt-lg-5">
                                     <ul>
-                                        <li><h3 class="primary-title-menu-black pt-3">BipBip</h3></li>
+                                        <li><h3 class="primary-title-menu-black pt-3">Qui sommes-nous ?</h3></li>
                                         <li><a href="{{ path("histoire") }}" title="Notre histoire" class="primary-title-menu">Notre histoire</a></li>
                                         <li><a href="{{ "/histoire/#solution" }}" title="Notre solution" class="primary-title-menu">Notre solution</a></li>
                                         <li><a href="{{ path("team") }}" title="Description Bip Bip" class="primary-title-menu">Notre team</a></li>
