--- a/templates/home/constat.html.twig
+++ b/templates/home/constat.html.twig
@@ -19,7 +19,7 @@
                  alt="115000 étudiants dans la métropole Lilloise"
                  class="img-fluid img-constat">
             <p class="">
-                <span class="accroche_primaire"><span class="mot_cle">115 000</span><br> étudiants</span> dans la métropole lilloise, souhaitant agir et s’enrichir en devenant bipers
+                <span class="accroche_primaire"><span class="mot_cle">230 000</span><br> étudiants</span> dans la région, souhaitant agir et s’enrichir en devenant bipers
             </p>
         </div>
         <div class="col-12 col-sm-3 text-center">
@@ -27,7 +27,7 @@
                  alt="17 incubateurs / accélérateurs de startup dansles Hauts de France"
                  class="img-fluid img-constat">
             <p>
-                <span class="accroche_primaire"><span class="mot_cle">662</span><br>  Starts-up innovantes</span> et qui souhaitent se développer dans notre région
+                <span class="accroche_primaire"><span class="mot_cle">+ de 660</span><br>  Starts-up innovantes</span> et qui souhaitent se développer dans notre région
             </p>
         </div>
     </div>
