--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -12,31 +12,27 @@
     <div id="notreHistoire">
         <h1 class="title-page"><span>Notre histoire</span></h1>
         <div class="row justify-content-center">
-            <div class="col-8 ml-4">
+            <div class="col-12 col-md-8 text-center">
                 <img src="{{ asset('images/video.png') }}" alt="video" class="videoNatacha">
             </div>
         </div>
-            <div class="row mb-5 justify-content-center">
-                <div class="col-8 col-md-4 text-center">
-                    <img class="img-fluid p-4" src="{{ asset('images/idee-notrehistoire.png') }}" alt="logo">
-                </div>
-                <div class="col-10 col-md-6 mt-4">
-                            <p>
-                                Amener sur Lille des points de collectes de smartphone qui vont permettre de: <br>
-                                - Faire un geste pour l'environnement. <br>
-                                - Mettre de l'argent facilement dans ta poche grâce à un circuit de distribution avec peu d'intermédaire.
-                                <br>
-                                - Créer de l'emploi régional à l'aide de l'énergie étudiante de la Métropole Lilloise.
-                            </p>
-                            <p><strong>L'étape suivante : <br></strong>
-                                Donner vie à des BipBip mobile en mettant en oeuvre des actions locales ! <br>
-                            </p>
-                </div>
+        <div class="row mb-5 justify-content-center">
+            <div class="col-6 col-sm-4 col-md-4 mt-md-5 text-center">
+                <img class="img-fluid p-4 p-lg-1 justify-content-center" src="{{ asset('images/idee-notrehistoire.png') }}" alt="logo">
+            </div>
+            <div class="col-10 col-md-8 p-md-3 p-lg-4 p-xl-5 mt-md-4 mt-lg-5 mt-xl-5">
+                <p>Amener sur Lille des points de collectes de smartphone qui vont permettre de: <br></p>
+                    <p>- Faire un geste pour l'environnement. <br>
+                    <p>- Mettre de l'argent facilement dans ta poche grâce à un circuit de distribution avec peu d'intermédaire.</p>
+                    <p>- Créer de l'emploi régional à l'aide de l'énergie étudiante de la Métropole Lilloise.</p>
+            </div>
 
-                <div class="col-10">
-                        <p>Au plus nous collectons de téléphones, plus les prix de nos BipBip mobile pourront être avantageux tout en gardant sa qualité absolue !<br></p>
-                        <p>On compte sur toi pour collecter un <strong>MAXIMUM</strong> de téléphones et de mettre la machine en marche!</p>
-                </div>
+            <div class="col-10 ">
+                <p><strong>L'étape suivante : <br></strong></p>
+                <p>Donner vie à des BipBip Mobile en mettant en oeuvre des actions locales !</p>
+                <p>Au plus nous collectons de téléphones, plus les prix de nos BipBip Mobile pourront être avantageux tout en gardant leur qualité absolue !<br></p>
+                <p>On compte sur toi pour collecter un <strong>MAXIMUM</strong> de téléphones et mettre la machine en marche !</p>
+            </div>
 
                     {{ include('home/constat.html.twig') }}
             </div>
@@ -50,9 +46,9 @@
         </div>
 
         <div class="row m-2">
-            <div class="col-12 mx-auto text-justify p-3 mt-5">
-                <p>BipBip Mobile a pour mission de faire le ménage dans les Hauts-de-France en proposant de recycler tous les téléphones
-                    usagés ou inutilisés à l'aide des associations étudiantes qui nous accueillent et nous accompagnent lors des points de collecte.</br>
+            <div class="col-10 mx-auto text-justify p-3 mt-5">
+                <p>BipBip Mobile s'engage à faire le ménage dans les Hauts-de-France en proposant de recycler tous les téléphones
+                    usagés ou inutilisés grâce aux étudiants qui nous accueillent et nous accompagnent lors des collectes</br>
                     C'est l'occasion pour nos partenaires locaux de se faire connaître davantage dans notre région.</p>
 
                 <ul>
